#0001| Added welcome message for customer

--- a/build.xml
+++ b/build.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Biblioteca" default="compile">
-<target name="compile" >
-    <javac srcdir="src;test" includeantruntime="true" destdir="antBuild">
-        <classpath location="lib/hamcrest-core-1.3.jar"/>
-        <classpath location="lib/junit-4.11.jar"/>
-    </javac>
-</target>
+<project name="Biblioteca" default="run">
+    <target name="compile" >
+        <javac srcdir="src;test" includeantruntime="true" destdir="antBuild">
+            <classpath location="lib/hamcrest-core-1.3.jar"/>
+            <classpath location="lib/junit-4.11.jar"/>
+        </javac>
+    </target>
 
-<target name="unit_tests" depends="compile">
-    <junit haltonerror="true" haltonfailure="true" printsummary="true">
-        <classpath location="lib/hamcrest-core-1.3.jar" path="antBuild"/>
-        <classpath location="lib/junit-4.11.jar" path="antBuild"/>
-    </junit>
-</target>
+    <target name="unit_tests" depends="compile">
+        <junit haltonerror="true" haltonfailure="true" printsummary="true">
+            <classpath location="lib/hamcrest-core-1.3.jar" path="antBuild"/>
+            <classpath location="lib/junit-4.11.jar" path="antBuild"/>
+            <test name="com.twu.biblioteca.WelcomeMessageTest" haltonfailure="true" haltonerror="true"/>
+        </junit>
+    </target>
 
-<target name ="createJar" depends="compile">
-    <jar destfile="lib/app.jar"
-         basedir="antBuild"
-         excludes="**/Test.class"/>
-</target>
+    <target name ="createJar" depends="unit_tests">
+        <jar destfile="lib/app.jar"
+             basedir="antBuild"
+             excludes="**/Test.class"/>
+    </target>
+
+    <target name="run" depends="createJar">
+        <java classname="com.twu.biblioteca.BibliotecaApp">
+            <classpath>
+                <pathelement location="lib/app.jar"/>
+                <pathelement path="${java.class.path}"/>
+            </classpath>
+        </java>
+    </target>
 
 </project>
