--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,7 @@
         <javac srcdir="src;test" includeantruntime="true" destdir="antBuild">
             <classpath location="lib/hamcrest-core-1.3.jar"/>
             <classpath location="lib/junit-4.11.jar"/>
+            <classpath location="lib/mockito-all-1.9.5.jar"/>
         </javac>
     </target>
 
@@ -12,7 +13,9 @@
         <junit haltonerror="true" haltonfailure="true" printsummary="true">
             <classpath location="lib/hamcrest-core-1.3.jar" path="antBuild"/>
             <classpath location="lib/junit-4.11.jar" path="antBuild"/>
+            <classpath location="lib/mockito-all-1.9.5.jar" path="antBuild"/>
             <test name="com.twu.biblioteca.ViewTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.BibliotecaAppTest" haltonfailure="true" haltonerror="true"/>
         </junit>
     </target>
 
@@ -23,7 +26,7 @@
     </target>
 
     <target name="run" depends="createJar">
-        <java classname="com.twu.biblioteca.BibliotecaApp">
+        <java classname="com.twu.biblioteca.Main">
             <classpath>
                 <pathelement location="lib/app.jar"/>
                 <pathelement path="${java.class.path}"/>
@@ -32,3 +35,5 @@
     </target>
 
 </project>
+
+
