--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@
             <classpath location="lib/mockito-all-1.9.5.jar" path="antBuild"/>
             <test name="com.twu.biblioteca.ViewTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.BibliotecaAppTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.LibraryTest" haltonfailure="true" haltonerror="true"/>
         </junit>
     </target>
 
