#0046| Added feature to display to librarian list of checked out books and login id of who should be held accountable

--- a/build.xml
+++ b/build.xml
@@ -21,6 +21,7 @@
             <test name="com.twu.biblioteca.MovieTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.ApplicationTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.AuthenticatorTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.UserTest" haltonfailure="true" haltonerror="true"/>
         </junit>
     </target>
 
