--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
             <test name="com.twu.biblioteca.ApplicationTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.AuthenticatorTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.UserTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.UserDetailsTest" haltonfailure="true" haltonerror="true"/>
         </junit>
     </target>
 
