#0051| Added functionality to print list of checked out books in proper format

--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,9 @@
             <test name="com.twu.biblioteca.AuthenticatorTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.UserTest" haltonfailure="true" haltonerror="true"/>
             <test name="com.twu.biblioteca.UserDetailsTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.MessageViewTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.TemplateViewTest" haltonfailure="true" haltonerror="true"/>
+
         </junit>
     </target>
 
