--- a/build.xml
+++ b/build.xml
@@ -14,19 +14,17 @@
             <classpath location="lib/hamcrest-core-1.3.jar" path="antBuild"/>
             <classpath location="lib/junit-4.11.jar" path="antBuild"/>
             <classpath location="lib/mockito-all-1.9.5.jar" path="antBuild"/>
-            <test name="com.twu.biblioteca.ViewTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.DispatcherTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.LibraryTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.BookTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.MovieTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.ApplicationTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.AuthenticatorTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.UserTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.UserDetailsTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.MessageViewTest" haltonfailure="true" haltonerror="true"/>
-            <test name="com.twu.biblioteca.TemplateViewTest" haltonfailure="true" haltonerror="true"/>
-
-        </junit>
+            <test name="com.twu.biblioteca.com.view.InputTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.controller.DispatcherTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.model.LibraryTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.model.BookTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.model.MovieTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.controller.ApplicationTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.controller.AuthenticatorTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.model.UserTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.view.MessageViewTest" haltonfailure="true" haltonerror="true"/>
+            <test name="com.twu.biblioteca.com.view.TemplateViewTest" haltonfailure="true" haltonerror="true"/>
+            </junit>
     </target>
 
     <target name ="createJar" depends="unit_tests">
